@@ -9,7 +9,10 @@ AC_PROG_CC
 AC_PROG_CXX
 AC_PATH_PROGS(SH, sh)
 AC_PROG_INSTALL
-AM_INIT_AUTOMAKE(starspan,0.994)
+STARSPAN_VERSION=0.9941
+AM_INIT_AUTOMAKE(starspan,$STARSPAN_VERSION)
+AC_SUBST(STARSPAN_VERSION)
+AC_CONFIG_HEADERS(src/config.h)
 AC_SUBST(SH)
 
 dnl ###########################################################
@@ -65,5 +68,5 @@ fi
 AC_SUBST(GDAL_INC GDAL_PREFIX)
 
 
-AC_OUTPUT([Makefile starspan])
+AC_OUTPUT([Makefile starspan mksrcdist.sh])
 
