@@ -1,5 +1,7 @@
+#!/bin/sh
 #
-# Stript to make STARSPAN source distribution
+# Stript to make StarSpan public source distribution.
+# See configure.in
 # $Id$
 #
 if [ -z $1 ]; then
@@ -7,8 +9,9 @@ if [ -z $1 ]; then
 	exit 1
 fi
 VERSION=$1
-if [ "$VERSION" != `cat VERSION` ]; then
-	echo "VERSION parameter must be equal to VERSION file contents"
+
+if [ "$VERSION" != "@STARSPAN_VERSION@" ]; then
+	echo "VERSION mismatch.  Check configure.in"
 	exit 2
 fi
 tag=`echo release-$VERSION | tr -t . _`
@@ -26,6 +29,9 @@ cvsroot=":ext:crueda@cvs.casil.ucdavis.edu:/cvsroot/starspan"
 mkdir -p DISTDIR &&\
 cd DISTDIR &&\
 cvs -d$cvsroot -q export -r $tag -d starspan-$VERSION starspan &&\
+cd starspan-$VERSION &&\
+./reconf &&\
+cd .. &&\
 tar cf starspan-$VERSION.tar starspan-$VERSION &&\
 gzip -9 starspan-$VERSION.tar &&\
 rm -rf starspan-$VERSION &&\
