@@ -2,6 +2,12 @@ starspan ChangeLog
 $Id$
                                     
 
+2005-06-18
+	- CVS: removed generated files; new reconf script;
+	  mksrcdist.sh.in updated to create public distribution.
+	  
+	- some refactoring
+
 2005-06-06 (0.994)
 	- Added option --show-fields
 	- Elapsed time reported only if --verbose is given
